<resources>
    <string name="app_name">Drop</string>
    <string name="title_activity_signup">Signup</string>
    <string name="nav_location">My Location</string>
    <string name="nav_drop">Drop</string>
    <string name="nav_myaccount">My Account</string>
    <string name="nav_filter">Filter</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="achievement_desc_downvotes_given">Certified critic\n\nAttained by downvoting drops</string>
    <string name="achievement_desc_downvotes_received">Litter dropper\n\nAttained by receiving downvotes</string>
    <string name="achievement_desc_drops_posted">Prolific dropper\n\nAttained by dropping drops</string>
    <string name="achievement_desc_drops_viewed">Window dropper\n\nAttained by viewing drops</string>
    <string name="achievement_desc_first_drop">First drop\n\nAttained by dropping for the first time</string>
    <string name="achievement_desc_profile_pic">Face drop\n\nAttained by uploading a profile pic</string>
    <string name="achievement_desc_upvotes_given">Supportive\n\nAttained by upvoting drops</string>
    <string name="achievement_desc_upvotes_received">Drop king\n\nAttained by receiving upvotes</string>
    <string name="achievement_title_downvotes_given">Certified critic</string>
    <string name="achievement_title_downvotes_received">Litter dropper</string>
    <string name="achievement_title_drops_posted">Prolific dropper</string>
    <string name="achievement_title_drops_viewed">Window dropper</string>
    <string name="achievement_title_first_drop">First drop</string>
    <string name="achievement_title_profile_pic">Face drop</string>
    <string name="achievement_title_upvotes_given">Supportive</string>
    <string name="achievement_title_upvotes_received">Drop king</string>

</resources>
