<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MyAccount">

    <VideoView
        android:id="@+id/VIDloginBG"
        android:layout_width="4000px"
        android:layout_height="match_parent"
        android:foregroundTint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/IVvideoColour"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="361dp"
        android:layout_height="528dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/signupbackground"
        android:contentDescription="Sign up background box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <TextView
        android:id="@+id/TVEmail"
        android:layout_width="325dp"
        android:layout_height="26dp"
        android:gravity="center"
        android:text="Email"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/TVuserName" />

    <TextView
        android:id="@+id/TVuserName"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="Username"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/IVprofileImage" />

    <Button
        android:id="@+id/BTNlogOut"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonbackground"
        android:text="LOG OUT"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="@+id/imageView3" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/IVprofileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="452dp"
        android:src="@drawable/default_dp"
        app:civ_border_color="#FFFFFFFF"
        app:civ_border_width="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView3" />


    <include
        layout="@layout/toolbar_myaccount_top"
        android:id="@+id/toolbar_myaccount_top"/>

    <ImageButton
        android:id="@+id/BTNupload"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonbackgroundwithstroke"
        app:layout_constraintBottom_toBottomOf="@+id/IVprofileImage"
        app:layout_constraintStart_toStartOf="@+id/IVprofileImage"
        app:layout_constraintTop_toTopOf="@+id/IVprofileImage"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_edit" />

    <ImageView
        android:id="@+id/IVupVotesGiven"
        android:layout_width="61dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/TVEmail"
        app:srcCompat="@drawable/not_achieved_placeholder" />

    <ImageView
        android:id="@+id/IVdropFirstPost"
        android:layout_width="61dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/IVupVotesGiven"
        app:layout_constraintTop_toBottomOf="@+id/TVEmail"
        app:srcCompat="@drawable/not_achieved_placeholder" />

    <ImageView
        android:id="@+id/IVdownVotesGiven"
        android:layout_width="61dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/IVdropFirstPost"
        app:layout_constraintTop_toBottomOf="@+id/TVEmail"
        app:srcCompat="@drawable/not_achieved_placeholder" />

    <ImageView
        android:id="@+id/IVdownVotesReceived"
        android:layout_width="61dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/IVdownVotesGiven"
        app:layout_constraintTop_toBottomOf="@+id/TVEmail"
        app:srcCompat="@drawable/not_achieved_placeholder" />

    <ImageView
        android:id="@+id/IVupVotesReceived"
        android:layout_width="61dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/IVtitleUpvotesGiven"
        app:srcCompat="@drawable/not_achieved_placeholder" />

    <ImageView
        android:id="@+id/IVdropsPosted"
        android:layout_width="61dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/IVupVotesReceived"
        app:layout_constraintTop_toBottomOf="@+id/TVtitleDropFirstPost"
        app:srcCompat="@drawable/not_achieved_placeholder" />

    <ImageView
        android:id="@+id/IVdropsViewed"
        android:layout_width="61dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/IVdropsPosted"
        app:layout_constraintTop_toBottomOf="@+id/TVtitleDownVotesGiven"
        app:srcCompat="@drawable/not_achieved_placeholder" />

    <ImageView
        android:id="@+id/IVprofilePicture"
        android:layout_width="61dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/IVdropsViewed"
        app:layout_constraintTop_toBottomOf="@+id/TVtitleDownVotesReceived"
        app:srcCompat="@drawable/not_achieved_placeholder" />

    <TextView
        android:id="@+id/TVachievmentDescription"
        android:layout_width="329dp"
        android:layout_height="26dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Click on an achievement for more detail"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/BTNlogOut"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3" />

    <TextView
        android:id="@+id/IVtitleUpvotesGiven"
        android:layout_width="61dp"
        android:layout_height="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/achievement_title_upvotes_given"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/IVupVotesGiven" />

    <TextView
        android:id="@+id/TVtitleDropFirstPost"
        android:layout_width="61dp"
        android:layout_height="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/achievement_title_first_drop"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/IVtitleUpvotesGiven"
        app:layout_constraintTop_toBottomOf="@+id/IVdropFirstPost" />

    <TextView
        android:id="@+id/TVtitleDownVotesGiven"
        android:layout_width="61dp"
        android:layout_height="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/achievement_title_downvotes_given"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/TVtitleDropFirstPost"
        app:layout_constraintTop_toBottomOf="@+id/IVdownVotesGiven" />

    <TextView
        android:id="@+id/TVtitleDownVotesReceived"
        android:layout_width="61dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/achievement_title_downvotes_received"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/TVtitleDownVotesGiven"
        app:layout_constraintTop_toBottomOf="@+id/IVdownVotesReceived" />

    <TextView
        android:id="@+id/TVtitleUpVotesReceived"
        android:layout_width="61dp"
        android:layout_height="14dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/achievement_title_upvotes_received"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/IVupVotesReceived" />

    <TextView
        android:id="@+id/TVtitleDropsPosted"
        android:layout_width="61dp"
        android:layout_height="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/achievement_title_drops_posted"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/TVtitleUpVotesReceived"
        app:layout_constraintTop_toBottomOf="@+id/IVdropsPosted" />

    <TextView
        android:id="@+id/TVtitleDropsViewed"
        android:layout_width="61dp"
        android:layout_height="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/achievement_title_drops_viewed"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/TVtitleDropsPosted"
        app:layout_constraintTop_toBottomOf="@+id/IVdropsViewed" />

    <TextView
        android:id="@+id/TVtitleProfilePic"
        android:layout_width="61dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/achievement_title_profile_pic"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/TVtitleDropsViewed"
        app:layout_constraintTop_toBottomOf="@+id/IVprofilePicture" />

    <TextView
        android:id="@+id/TVachievementTitle"
        android:layout_width="329dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TVachievmentDescription"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/TVtitleDropsViewed"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>